# swc-plugin-add-display-name

./: .gitignore  .swcrc  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  rust-toolchain
src/: add_display_name.rs  has_jsx.rs  lib.rs
