[package]
name = "swc_plugin_add_display_name"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = "symbols"

[dependencies]
serde = "1"
swc_core = { version = "14.0.1", features = ["ecma_plugin_transform", "__parser"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
